<resources>
    <!-- General string definitions -->
    <string name="app_name">SerVices</string>

    <!-- Fragments label titles -->
    <string name="home_fragment_title">SerVices</string>
    <string name="new_service_fragment_title">Nuevo servicio</string>
    <string name="my_services_fragment_title">Mis servicios</string>
    <string name="profile_fragment_title">Mi perfil</string>
    <string name="edit_service_fragment_title">Editar servicio</string>

    <!-- Bottom navigation strings -->
    <string name="menu_home">Inicio</string>
    <string name="menu_new_service">Nuevo servicio</string>
    <string name="menu_my_services">Mis servicios</string>
    <string name="menu_profile">Mi perfil</string>

    <!-- Login activity strings -->
    <string name="login_activity_image_description">Logo de la aplicación</string>
    <string name="login_activity_heading">Iniciar sesión</string>
    <string name="login_activity_username_hint">Usuario</string>
    <string name="login_activity_password_hint">Contraseña</string>
    <string name="login_activity_login_btn">Acceder</string>
    <string name="login_activity_signup_text">Registrarse</string>
    <string name="login_activity_recover_text">Recuperar contraseña</string>

    <!-- Profile fragment strings -->
    <string name="profile_fragment_btn_save">Guardar</string>
    <string name="profile_fragment_image_description">Imagen de perfil de usuario</string>
    <string name="profile_fragment_name_hint">Nombre completo</string>
    <string name="profile_fragment_username_hint">Usuario</string>
    <string name="profile_fragment_email_hint">Correo electrónico</string>
    <string name="profile_fragment_phone_hint">Número de teléfono</string>
    <string name="profile_fragment_province_hint">Provincia</string>
    <string name="profile_fragment_address_hint">Dirección</string>
    <string name="profile_fragment_password_current_hint">Contraseña actual</string>
    <string name="profile_fragment_password_new_hint">Contraseña nueva</string>
    <string name="profile_fragment_password_confirm_hint">Confirmar contraseña</string>

    <!-- Signup fragment strings -->
    <string name="register_fragment_et_full_name_hint">Nombre completo</string>
    <string name="register_fragment_et_username_hint">Nombre de usuario</string>
    <string name="register_fragment_et_email_hint">Correo electrónico</string>
    <string name="register_fragment_et_phone_hint">Número de teléfono</string>
    <string name="register_fragment_et_password_hint">Contraseña</string>
    <string name="register_fragment_et_password_confirm_hint">Confirmar contraseña</string>
    <string name="register_fragment_btn_register">Registrarse</string>

    <!-- Toolbar actions strings -->
    <string name="toolbar_action_logout">Cerrar sesión</string>

    <!-- New Service fragment strings -->
    <string name="new_service_fragment_tv_title">Título del servicio</string>
    <string name="new_service_fragment_et_title">Digite el título del servicio</string>
    <string name="new_service_fragment_tv_type">Tipo de servicio</string>
    <string name="new_service_fragment_tv_price">Precio</string>
    <string name="new_service_fragment_et_price">Digite el precio del servicio</string>
    <string name="new_service_fragment_tv_description">Descripción</string>
    <string name="new_service_fragment_et_description">Digite la descripción del servicio</string>
    <string name="new_service_fragment_btn_save">Publicar</string>
</resources>