<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="cr.una.eif409.frontend.servicesapp.ui.view.HomeFragment"
        android:label="@string/home_fragment_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/newServiceFragment"
        android:name="cr.una.eif409.frontend.servicesapp.ui.view.NewServiceFragment"
        android:label="@string/new_service_fragment_title"
        tools:layout="@layout/fragment_new_service" >
        <action
            android:id="@+id/action_newServiceFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/myServicesFragment"
        android:name="cr.una.eif409.frontend.servicesapp.ui.view.MyServicesFragment"
        android:label="@string/my_services_fragment_title"
        tools:layout="@layout/fragment_my_services" >
        <action
            android:id="@+id/action_myServicesFragment_to_editServiceFragment"
            app:destination="@id/editServiceFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="cr.una.eif409.frontend.servicesapp.ui.view.ProfileFragment"
        android:label="@string/profile_fragment_title"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/editServiceFragment"
        android:name="cr.una.eif409.frontend.servicesapp.ui.view.EditServiceFragment"
        android:label="@string/edit_service_fragment_title"
        tools:layout="@layout/fragment_edit_service"/>
</navigation>