<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="RegisterViewModel"
            type="cr.una.eif409.frontend.servicesapp.ui.viewmodel.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/register_fragment_et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_full_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.fullName}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_et_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_fragment_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_username_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.username}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_et_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_full_name" />

            <EditText
                android:id="@+id/register_fragment_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_email_hint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.email}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_et_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_username" />

            <EditText
                android:id="@+id/register_fragment_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_phone_hint"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.phoneNumber}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_email" />

            <EditText
                android:id="@+id/register_fragment_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.password}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_et_password_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_phone" />

            <EditText
                android:id="@+id/register_fragment_et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_fragment_et_password_confirm_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:text="@={RegisterViewModel.passwordConfirmation}"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/register_fragment_btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_password" />

            <Button
                android:id="@+id/register_fragment_btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> RegisterViewModel.onSignupButtonClicked()}"
                android:text="@string/register_fragment_btn_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_fragment_et_password_confirm"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
