<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="MyServicesViewModel"
            type="cr.una.eif409.frontend.servicesapp.ui.viewmodel.MyServicesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/edit_service_fragment_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_service_fragment_tv_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_service_fragment_et_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/new_service_fragment_et_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@={MyServicesViewModel.selectedService.title}"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_tv_title" />

            <TextView
                android:id="@+id/edit_service_fragment_tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_service_fragment_tv_type"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_et_title" />

            <Spinner
                android:id="@+id/edit_service_fragment_sp_type"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_tv_category"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/edit_service_fragment_tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_service_fragment_tv_price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_sp_type" />

            <EditText
                android:id="@+id/edit_service_fragment_et_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/new_service_fragment_et_price"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@={MyServicesViewModel.price}"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_tv_price" />

            <TextView
                android:id="@+id/edit_service_fragment_tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_service_fragment_tv_description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_et_price" />

            <EditText
                android:id="@+id/edit_service_fragment_et_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#e9ecef"
                android:ems="10"
                android:hint="@string/new_service_fragment_et_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="7"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scrollbars="vertical"
                android:text="@={MyServicesViewModel.selectedService.description}"
                android:textColorHint="#546E7A"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_tv_description" />

            <Button
                android:id="@+id/edit_service_fragment_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> MyServicesViewModel.onSave()}"
                android:text="Guardar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_service_fragment_btn_delete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_et_description"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/edit_service_fragment_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/red"
                android:onClick="@{() -> MyServicesViewModel.onDelete()}"
                android:text="Eliminar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/edit_service_fragment_btn_save"
                app:layout_constraintTop_toBottomOf="@+id/edit_service_fragment_et_description"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>